<resources>
    <string name="app_name">Trox</string>
    <string name="map_api_key">AIzaSyD-xb0bmAfov55i-LH-PyTI8DZgvrgUvdE</string>
    <string name="password_pattern">^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)(?=.*[@$!%*?&amp;])[A-Za-z\\d@$!%*?&amp;]{6,12}$</string>
    <string name="parcel_delivery">PARCEL DELIVERY</string>
    <string name="_1_parcel_delivery_platform">#1 Parcel Delivery Platform</string>
    <string name="welcome_to_trox">Welcome to Trox!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="your_e_mail_address">Your e-mail address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="or">OR</string>
    <string name="create_account">Create account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="customer">Customer</string>
    <string name="merchant">Merchant</string>
    <string name="by_signing_up_you_are_agreeing_to_our_terms_amp_conditions"><![CDATA[By signing up you are agreeing to our Terms & Conditions]]></string>
    <string name="onboarding_title1">Quick and Easy Fix Your Parcel</string>
    <string name="onboarding_desc1">Your parcel and your trust, our delivery is effective and fast. We deliver your parcel in the safest way.</string>
    <string name="onboarding_title2">The Easy Way to Save Your Time</string>
    <string name="onboarding_desc2">Drop and take your parcel in the shortest time. We deliver all parcels with extra care and dedication.</string>
    <string name="onboarding_title3">The Ultimate Deal On Delivery</string>
    <string name="onboarding_desc3">We are the virtual delivery guys. We drop your parcel at the destination with care and loyalty.</string>
    <string name="joined_us_before">Joined us before?</string>
    <string name="sign_up">Sign up</string>
    <string name="phone">Phone</string>
    <string name="continue_">Continue</string>
    <string name="explore_now">Explore Now</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="we_sent_otp_to_your_mobile_number">We have sent OTP to your mobile number</string>
    <string name="verify">Verify</string>
    <string name="congratulations">Congratulations!</string>
    <string name="sign_up_completed">Sign up completed</string>
    <string name="full_legal_name">Full Legal Name</string>
    <string name="death_of_birth">Death of Birth</string>
    <string name="contact_number">Contact Number</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="go_to_home">Go to Home</string>
    <string name="account_ready">Your account is ready to use. You will be redirected to the homepage automatically within a few seconds.</string>
    <string name="fill_your_profile">Fill Your Profile</string>
    <string name="sign_up_as">Sign up as</string>
    <string name="select_a_contact_details">Select which contact details we should use to reset you password</string>
    <string name="e_mail">E-mail</string>
    <string name="send_to_email">Code will be sent to your e-mail</string>
    <string name="sent_to_phone">Code will be sent to your phone</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_your_tracking_number">Enter your tracking number...</string>
    <string name="send_parcel">Send Parcel</string>
    <string name="price_check">Price Check</string>
    <string name="track_order">Track Order</string>
    <string name="domestic">Domestic</string>
    <string name="international">International</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="pick_your_location">Pick Your Location</string>
    <string name="home">Home</string>
    <string name="set_address">Set Address</string>
    <string name="work">Work</string>
    <string name="offers">Offers</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="saved_address">Saved Address</string>
    <string name="language">Language</string>
    <string name="permissions">Permissions</string>
    <string name="emergency_support">Emergency Support</string>
    <string name="privacy_policies_amp_faq"><![CDATA[Privacy Policies & FAQ]]></string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="add_new">Add New</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="bengali">Bengali</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="location_access">Location Access</string>
    <string name="for_a_better_pickup_experience">For a better pickup experience</string>
    <string name="directly_capture_image_for_your_profile_photo">Directly capture image for your profile photo</string>
    <string name="gallery_access">Gallery Access</string>
    <string name="select_image_as_profile_photo_from_gallery">Select image as profile photo from gallery</string>
    <string name="contact_address">Contact Address</string>
    <string name="get_contact_list_for_easy_top_up_experience">Get contact list for easy top-up experience</string>
    <string name="microphone_access">Microphone Access</string>
    <string name="for_in_app_voice_messaging">For in-app voice messaging</string>
    <string name="device_state">Device State</string>
    <string name="for_better_service_quality">For better service quality</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="customer_service">Customer Service</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="website">Website</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reliable_delivery">Reliable Delivery</string>
    <string name="send_things_to_your_destination_fast_and_securely">Send things to your destination fast and securely.</string>
    <string name="planning_and_setting_up_shipping_for_your_small_business">Planning and setting up shipping for your small business</string>
    <string name="order_details">Order Details</string>
    <string name="receiver_s_phone_number">Receiver\'s Phone Number</string>
    <string name="receiver_s_name">Receiver’s Name</string>
    <string name="city">City</string>
    <string name="zone">Zone</string>
    <string name="area_amp_full_address"><![CDATA[Area & Full Address]]></string>
    <string name="country">Country</string>
    <string name="parcel_weight_kg">Parcel Weight (KG)</string>
    <string name="parcel">Parcel</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_country">Enter Country</string>
    <string name="state">State</string>
    <string name="select_courier_type">Select courier Type</string>
    <string name="non_perishable_goods_no_fragile_no_food_items">Non-perishable goods, no fragile, no food items</string>
    <string name="document">Document</string>
    <string name="no_passport_or_bank_cheques">No passport or bank cheques</string>
    <string name="get_quotation">Get Quotation</string>
    <string name="destination_city">Destination City</string>
    <string name="merchant_drop">Merchant Drop</string>
    <string name="pickup_city">Pickup City</string>
    <string name="home_pickup">Home Pickup</string>
    <string name="select_city">Select City</string>
    <string name="click_to_upload_doc_pdf_jpg_etc">Click to upload DOC, PDF, JPG ETC</string>
    <string name="rating">Rating</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to Logout?</string>
    <string name="submit">Submit</string>
    <string name="active_orders">Active Orders</string>
    <string name="track_orders">Track Orders</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="pickup_requested">Pickup Requested</string>
    <string name="order_placed">Order placed</string>
    <string name="processing">Processing</string>
    <string name="picked_up_by_delivery_man">Picked up by delivery man</string>
    <string name="delivering">Delivering</string>
    <string name="delivered">Delivered</string>
    <string name="order_id">Order ID</string>
    <string name="shipping_info">Shipping Info</string>
    <string name="sender">Sender</string>
    <string name="phone_no">Phone No</string>
    <string name="amount">Amount</string>
    <string name="call_support">Call Support</string>
    <string name="your_rating_successfully_done_thanks_for_giving_your_feedback">Your Rating Successfully Done. Thanks for giving your feedback.</string>
    <string name="packaging_instructions">Packaging Instructions</string>
    <string name="receiver">Receiver</string>
    <string name="discount">Discount</string>
    <string name="fee">Fee</string>
    <string name="delivery_man">Delivery Man</string>
    <string name="picked_up_by_rider">Picked up By Rider</string>
    <string name="order_picked_up">Order Picked up</string>
    <string name="returned">Returned</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur. Egestas tortor sit suscipit aliquam suspendisse a pellentesque lectus. Nisi elit tellus cursus pulvinar. Vitae non at mauris lorem tortor tristique eu mi. Cursus ante arcu dui montes commodo. Erat erat.</string>
    <string name="message_user_type">You must select your user type</string>
    <string name="user_type">User type</string>
    <string name="profile_updated">Profile updated</string>
    <string name="fill_all_the_fields">You need to fill all the fields</string>
    <string name="select_user_type">Select user type</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="select_your_country">Select your country</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="select_a_pickup_location">Select a pickup location</string>
    <string name="add_pickup_location">Add Pickup Location</string>
    <string name="confirm">Confirm</string>
    <string name="pickup">Pickup</string>
    <string name="guide_pickup_agent">Guide Pickup Agent</string>
    <string name="add_direction_road_landmark_house_etc">Add Direction (Road, Landmark, House etc.)</string>
    <string name="road">Road</string>
    <string name="landmark">Landmark</string>
    <string name="house">House</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="total_amount">Total Amount</string>
    <string name="billing_information">Billing Information</string>
    <string name="pay_with">Pay with</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="receiver_details">Receiver Details</string>
    <string name="click_to_upload">Click to upload</string>
    <string name="business_name">Business Name</string>
    <string name="upload_noc_form">Upload NOC Form</string>
    <string name="business_identity">Business Identity</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="a_link_to_reset_your_password_will_be_sent_to_your_verified_e_mail_address">A link to reset your password will be sent to your verified e-mail address</string>
    <string name="pasword_reset_link">A password reset link has been sent to your e-mail address</string>
</resources>