<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/colorPrimaryLightest"
        app:cnb_iconColor="@color/colorPrimary"
        app:cnb_textColor="@color/colorPrimary"/>
    <item
        android:id="@+id/nav_order"
        android:icon="@drawable/ic_orders"
        android:title="@string/orders"
        app:cnb_backgroundColor="@color/colorPrimaryLightest"
        app:cnb_iconColor="@color/colorPrimary"
        app:cnb_textColor="@color/colorPrimary"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/colorPrimaryLightest"
        app:cnb_iconColor="@color/colorPrimary"
        app:cnb_textColor="@color/colorPrimary"/>
</menu>