<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/main">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:tint="@color/colorBlackHighEmp"
            android:src="@drawable/ic_arrow_left"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/delivery_address"
            android:textColor="@color/colorBlackHighEmp"
            android:textSize="16sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/guide_pickup_agent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:textColor="@color/colorBlackHighEmp"
            android:textSize="16sp"></TextView>

        <EditText
            android:id="@+id/road"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/edit_text_bg2"
            android:hint="@string/road"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="14sp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/ubuntu"
            android:textColorHint="@color/colorBlackLowEmp"
            android:textColor="@color/colorBlackHighEmp"/>

        <EditText
            android:id="@+id/landmark"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/edit_text_bg2"
            android:hint="@string/landmark"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/ubuntu"
            android:textColorHint="@color/colorBlackLowEmp"
            android:textColor="@color/colorBlackHighEmp"/>

        <EditText
            android:id="@+id/house"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/edit_text_bg2"
            android:hint="@string/house"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/ubuntu"
            android:textColorHint="@color/colorBlackLowEmp"
            android:textColor="@color/colorBlackHighEmp"/>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:layout_gravity="bottom"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/confirm"
            android:textColor="@color/colorWhiteHighEmp"
            android:textSize="16sp" />


    </androidx.cardview.widget.CardView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>