<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@drawable/gradient_bg"
    tools:context=".authentication.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo_2"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/_1_parcel_delivery_platform"
            android:fontFamily="@font/ubuntu_medium"
            android:textColor="@color/colorWhiteHighEmp"
            android:textSize="16sp"></TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="24dp"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            app:cardBackgroundColor="@color/colorWhiteHighEmp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/welcome_to_trox"
                    android:fontFamily="@font/ubuntu_bold"
                    android:textColor="@color/colorBlackHighEmp"
                    android:textSize="20sp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/login_to_continue"
                    android:fontFamily="@font/ubuntu"
                    android:layout_marginBottom="24dp"
                    android:textColor="@color/colorBlackHighEmp"
                    android:textSize="12sp"></TextView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:textColor="@color/colorBlackHighEmp"
                    android:textColorHint="@color/colorBlackLowEmp"
                    app:startIconDrawable="@drawable/ic_email"
                    app:boxStrokeWidth="0dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:hint="@string/your_e_mail_address"
                        android:inputType="textEmailAddress|textNoSuggestions"
                        android:textColor="@color/colorBlackHighEmp"
                        android:textColorHint="@color/colorBlackLowEmp"
                        android:background="@drawable/edit_text_bg"
                        android:textCursorDrawable="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/colorBlackHighEmp"
                    android:textColorHint="@color/colorBlackLowEmp"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:boxStrokeWidth="0dp"
                    app:passwordToggleDrawable="@drawable/password_toggle"
                    app:passwordToggleEnabled="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:hint="@string/password"
                        android:inputType="text|textPassword"
                        android:textColor="@color/colorBlackHighEmp"
                        android:textColorHint="@color/colorBlackLowEmp"
                        android:background="@drawable/edit_text_bg"
                        android:textCursorDrawable="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/log_in"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    app:cardCornerRadius="60dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginRight="24dp"
                    app:cardBackgroundColor="@color/colorPrimary">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:fontFamily="@font/ubuntu_medium"
                        android:textSize="16sp"
                        android:textColor="@color/colorWhiteHighEmp"
                        android:layout_gravity="center"></TextView>


                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></CheckBox>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_me"
                        android:fontFamily="@font/ubuntu_medium"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlackMidEmp"
                        android:layout_gravity="center"></TextView>

                </LinearLayout>

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:fontFamily="@font/ubuntu_bold"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"></TextView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="7"
                    android:layout_margin="24dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:background="@color/colorWhiteMidEmp"
                        android:layout_height="1dp"></View>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/or"
                        android:layout_weight="1"
                        android:fontFamily="@font/ubuntu_medium"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:textColor="@color/colorBlackLowEmp"></TextView>

                    <View
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:background="@color/colorWhiteMidEmp"
                        android:layout_height="1dp"></View>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/btn_facebook"></ImageView>

                    <View
                        android:layout_width="12dp"
                        android:layout_height="0dp"></View>

                    <ImageView
                        android:id="@+id/google_auth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/btn_google"></ImageView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:fontFamily="@font/ubuntu_medium"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlackMidEmp"
                        android:layout_gravity="center"></TextView>

                    <TextView
                        android:id="@+id/sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_account"
                        android:fontFamily="@font/ubuntu_medium"
                        android:textSize="14sp"
                        android:layout_marginLeft="4dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_gravity="center"></TextView>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>