<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:minWidth="320dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="24dp"
    app:cardBackgroundColor="@color/colorWhiteHighEmp"
    app:cardCornerRadius="16dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="320dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/select_your_gender"
                android:textColor="@color/colorBlackHighEmp"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:padding="16dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/colorBlackHighEmp"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/male"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/colorBlackHighEmp"
                    android:textSize="14sp"></TextView>



            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:padding="16dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/colorBlackHighEmp"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/female"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/colorBlackHighEmp"
                    android:textSize="14sp"></TextView>



            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:padding="16dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/colorBlackHighEmp"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/other"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/colorBlackHighEmp"
                    android:textSize="14sp"></TextView>



            </RelativeLayout>

        </LinearLayout>


</androidx.cardview.widget.CardView>